--- a/index.html
+++ b/index.html
@@ -39,7 +39,7 @@
 			</div>
 		</div>
 	</div>
-	<script type="text/javascript" src="./assets/js/GifTastic.js">
+	<script type="text/javascript" src="./assets/js/giftastic.js">
     </script>
 </body>
 
